fix gap problem on favorites recipe side

--- a/python-project-starter/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/python-project-starter/react-app/src/components/ProfilePage/ProfilePage.css
@@ -5,7 +5,6 @@
 }
 
 .profile-recipes-container {
-    display: grid;
     grid-template-columns: 1fr;
     row-gap: 10px;
     margin-left: 30px;
